added changes for java 1.7